--- a/code/assets/styles/app.css
+++ b/code/assets/styles/app.css
@@ -1,3 +1,95 @@
-body {
-    background-color: skyblue;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import "tailwindcss";
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    appearance: none;
+    display: none;
+}
+
+input[type="checkbox"] {
+    position: relative;
+    cursor: pointer;
+    background-color: rgb(215, 215, 215);
+}
+
+input[type="checkbox"]:hover {
+    border-color: #1d9bd0;
+}
+
+input[type="checkbox"]:checked {
+    background-color: #1d9bd0;
+    border-color: #1d9bd0;
+}
+
+input[type="checkbox"]:checked::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 8px;
+    height: 8px;
+    background-color: white;
+    border-radius: 9999px;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+}
+
+input[type="search"] {
+    appearance: none;
+    -webkit-appearance: none;
+    background-color: white;
+    border-radius: 0.375rem;
+}
+
+.breed-list {
+    display: none;
+}
+
+#cat:checked ~ form #cat-breeds {
+    display: block;
+}
+
+#dog:checked ~ form #dog-breeds {
+    display: block;
+}
+
+#dob-no:checked ~ form #approx-age-group {
+    display: block;
+}
+
+#dob-yes:checked ~ form #dob-inputs-group {
+    display: block;
+}
+
+#approx-age-group,
+#dob-inputs-group {
+    display: none;
+}
+
+.dangerous-breed {
+    position: relative;
+    cursor: pointer;
+}
+
+.dangerous-breed:hover .tooltip {
+    opacity: 1;
+    visibility: visible;
+}
+
+#approx-age {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3csvg fill='light-grey' height='20' viewBox='0 0 20 20' width='20' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M7 7l3 3 3-3' stroke='gray' stroke-width='2' fill='none' stroke-linecap='round'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 0.75rem center;
+    background-size: 1.5em;
+    padding-right: 2.5rem;
+}
+
+.input-error {
+    @apply border-red-500 focus:border-red-500 focus:ring-red-500;
 }
