--- a/code/templates/components/PetRegistrationForm.html.twig
+++ b/code/templates/components/PetRegistrationForm.html.twig
@@ -33,79 +33,205 @@
     <br>
     <fieldset>
         <legend class="font-semibold text-gray-700 mb-2 text-sm">Pet type</legend>
+
         <div class="flex max-w-xs">
-            {% for choice in form.type.vars.choices %}
-                {% set id = form.type.vars.id ~ '_' ~ loop.index %}
-                {% set name = form.type.vars.full_name %}
-                {% set label = choice.label %}
-                {% set value = choice.value %}
-                {% set isChecked = (form.type.vars.value == value) ? 'checked' : '' %}
+            {% for child in form.type %}
                 {% set rounded = loop.first ? 'rounded-l' : (loop.last ? 'rounded-r' : '') %}
-                <div class="peer">
-                    <input
-                        type="radio"
-                        id="{{ id }}"
-                        name="{{ name }}"
-                        value="{{ value }}"
-                        {{ isChecked }}
-                        class="hidden peer"
-                        data-model="type"
-                    />
+
+                <div class="relative">
+                    {# ВАЖНО: без data-model на инпуте! Рендерим штатный radio от Symfony #}
+                    {{ form_widget(child, { attr: { class: 'sr-only peer' } }) }}
+
+                    {# По клику дергаем Live-экшен и передаём id (value радио) #}
                     <label
-                            for="{{ id }}"
+                            for="{{ child.vars.id }}"
+                            data-action="click->live#action"
+                            data-live-action-param="pickType"
+                            data-live-id-param="{{ child.vars.value }}"
                             class="cursor-pointer px-4 py-2 {{ rounded }}
-                        border border-[color:#1D9BD0]
-                        hover:border-[color:#1983b8]
-                        {{ not loop.first ? 'border-l-0' : '' }}
-                        peer-checked:bg-[color:#1D9BD0]
-                        peer-checked:text-white
-                        peer-checked:border-[color:#1D9BD0]
-                        transition"
+                 border border-[color:#1D9BD0] hover:border-[color:#1983b8]
+                 {{ not loop.first ? 'border-l-0' : '' }}
+                 peer-checked:bg-[color:#1D9BD0]
+                 peer-checked:text-white
+                 peer-checked:border-[color:#1D9BD0]
+                 transition block"
                     >
-                        {{ label }}
+                        {{ child.vars.label }}
                     </label>
                 </div>
             {% endfor %}
         </div>
+
         {% if form_errors(form.type) %}
             <p class="text-red-600 text-sm mt-1">{{ form_errors(form.type) }}</p>
         {% endif %}
     </fieldset>
+
+
+
+
+
+
+
     <br>
 
     <div class="relative">
-        <label
-                for="breed"
-                class="block mb-1 font-semibold text-sm text-gray-700"
-        >
+        <label for="breed-search" class="block mb-1 font-semibold text-sm text-gray-700">
             What breed are they?
         </label>
+
         <input
+                id="breed-search"
                 type="search"
                 class="w-full border border-gray-300 rounded px-3 py-2"
                 placeholder="Can't find it?"
-                data-model="debounce(10000)|breedSearch"
+                data-model="debounce(300)|breedSearch"
                 data-action="input->live#action"
                 data-live-action-param="searchBreeds"
                 autocomplete="off"
+                value="{{ this.breedSearch ?? '' }}"
         />
 
+        <input type="hidden"
+               name="{{ form.breed.vars.full_name }}"
+               value="{{ this.breedId ?? '' }}">
+
         {% if filteredBreeds is defined and filteredBreeds is not empty %}
-            <div class="absolute z-10 bg-white border border-gray-300 w-full mt-1 rounded shadow">
-                {% for breed in filteredBreeds %}
+            <div class="absolute z-10 bg-white border border-gray-300 w-full mt-1 rounded shadow max-h-64 overflow-auto">
+                {% for b in filteredBreeds %}
                     <button
                             type="button"
                             class="w-full text-left px-4 py-2 hover:bg-gray-100"
                             data-action="click->live#action"
                             data-live-action-param="setBreed"
-                            data-live-breed-param="{{ breed }}"
+                            data-live-id-param="{{ b.id }}"
                     >
-                        {{ breed }}
+                        {{ b.name }}
                     </button>
                 {% endfor %}
             </div>
         {% endif %}
+
     </div>
+
+
+    {#    <fieldset class="mt-4">#}
+{#        <legend class="font-semibold text-gray-700 mb-2 text-sm">#}
+{#            Do you know their date of birth?#}
+{#        </legend>#}
+
+{#        <div class="flex max-w-xs">#}
+{#            #}{# NO #}
+{#            <div>#}
+{#                <input#}
+{#                        type="radio"#}
+{#                        id="dob-no"#}
+{#                        name="dob-known"#}
+{#                        value="0"#}
+{#                        class="hidden peer"#}
+{#                        data-model="dobKnown"#}
+{#                        data-model-event="change"#}
+{#                        {% if not this.dobKnown %}checked{% endif %}#}
+{#                />#}
+{#                <label#}
+{#                        for="dob-no"#}
+{#                        class="cursor-pointer px-4 py-2 rounded-l border border-[color:#1D9BD0]#}
+{#               hover:border-[color:#1983b8]#}
+{#               peer-checked:bg-[color:#1D9BD0] peer-checked:text-white#}
+{#               peer-checked:border-[color:#1D9BD0] transition block"#}
+{#                >#}
+{#                    No#}
+{#                </label>#}
+{#            </div>#}
+
+{#            #}{# YES #}
+{#            <div>#}
+{#                <input#}
+{#                        type="radio"#}
+{#                        id="dob-yes"#}
+{#                        name="dob-known"#}
+{#                        value="1"#}
+{#                        class="hidden peer"#}
+{#                        data-model="dobKnown"#}
+{#                        data-model-event="change"#}
+{#                        {% if this.dobKnown %}checked{% endif %}#}
+{#                />#}
+{#                <label#}
+{#                        for="dob-yes"#}
+{#                        class="cursor-pointer px-4 py-2 rounded-r border border-[color:#1D9BD0] border-l-0#}
+{#               hover:border-[color:#1983b8]#}
+{#               peer-checked:bg-[color:#1D9BD0] peer-checked:text-white#}
+{#               peer-checked:border-[color:#1D9BD0] transition block"#}
+{#                >#}
+{#                    Yes#}
+{#                </label>#}
+{#            </div>#}
+{#        </div>#}
+
+{#        #}{# Approximate Age (если ДР неизвестна) #}
+{#        {% if not this.dobKnown %}#}
+{#            <div class="mt-3">#}
+{#                <label for="approx-age" class="block mb-1 font-semibold text-gray-700 text-sm">#}
+{#                    Approximate Age#}
+{#                </label>#}
+{#                <select#}
+{#                        id="approx-age"#}
+{#                        name="approximateAge"#}
+{#                        data-model="approximateAge"#}
+{#                        class="w-full max-w-xs border border-gray-300 bg-white rounded px-3 py-2#}
+{#               hover:border-gray-400 focus:outline-none focus:ring-1#}
+{#               focus:ring-[color:#1D9BD0] focus:border-[color:#1D9BD0]"#}
+{#                        required#}
+{#                >#}
+{#                    <option value="">Select age</option>#}
+{#                    {% for i in 1..20 %}#}
+{#                        <option value="{{ i }}" {% if this.approximateAge == i %}selected{% endif %}>{{ i }}</option>#}
+{#                    {% endfor %}#}
+{#                </select>#}
+{#            </div>#}
+{#        {% endif %}#}
+
+{#        #}{# Date of Birth (если ДР известна) #}
+{#        {% if this.dobKnown %}#}
+{#            <div class="mt-3">#}
+{#                <label class="block font-semibold text-gray-700 text-sm mb-2">Birthdate</label>#}
+{#                <div class="flex gap-2">#}
+{#                    <div class="flex flex-col">#}
+{#                        <label class="text-gray-600 text-xs mb-1" for="dob-day">Day</label>#}
+{#                        <input#}
+{#                                id="dob-day" type="number" inputmode="numeric" min="1" max="31" placeholder="DD"#}
+{#                                class="w-20 border border-gray-300 rounded px-2 py-1#}
+{#                   hover:border-gray-400 focus:outline-none focus:ring-1#}
+{#                   focus:ring-[color:#1D9BD0] focus:border-[color:#1D9BD0]"#}
+{#                                data-model="dobDay" required#}
+{#                        />#}
+{#                    </div>#}
+{#                    <div class="flex flex-col">#}
+{#                        <label class="text-gray-600 text-xs mb-1" for="dob-month">Month</label>#}
+{#                        <input#}
+{#                                id="dob-month" type="number" inputmode="numeric" min="1" max="12" placeholder="MM"#}
+{#                                class="w-20 border border-gray-300 rounded px-2 py-1#}
+{#                   hover:border-gray-400 focus:outline-none focus:ring-1#}
+{#                   focus:ring-[color:#1D9BD0] focus:border-[color:#1D9BD0]"#}
+{#                                data-model="dobMonth" required#}
+{#                        />#}
+{#                    </div>#}
+{#                    <div class="flex flex-col">#}
+{#                        <label class="text-gray-600 text-xs mb-1" for="dob-year">Year</label>#}
+{#                        <input#}
+{#                                id="dob-year" type="number" inputmode="numeric" min="1900" max="{{ 'now'|date('Y') }}" placeholder="YYYY"#}
+{#                                class="w-28 border border-gray-300 rounded px-2 py-1#}
+{#                   hover:border-gray-400 focus:outline-none focus:ring-1#}
+{#                   focus:ring-[color:#1D9BD0] focus:border-[color:#1D9BD0]"#}
+{#                                data-model="dobYear" required#}
+{#                        />#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        {% endif %}#}
+{#    </fieldset>#}
+
+
     <button
             type="submit"
             class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition">
